--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@ import numpy as np
 
 
 file_path=vg.generaterandom_graph(100,seed=221)
-graph_dataset = cs.GraphDataset(adj_matrix)
+graph_dataset = cr.GraphDataset(adj_matrix)
 data_loader = DataLoader(graph_dataset, batch_size=5, shuffle=True)
 adj_matrix = np.loadtxt(file_path,delimiter=',')
-model = cs.GraphTransformer(
+model = cr.GraphTransformer(
            num_layers, d_model, num_heads, d_feedforward, input_dim)
            top_nodes = vg.find_top_nodes(adj_matrix, num_nodes=5)
 
 num_epochs = 10
-cs.train_model(model, data_loader, criterion, optimizer, num_epochs)
+cr.train_model(model, data_loader, criterion, optimizer, num_epochs)
        
        
 node_index = 2   #target node
-recommended_nodes = cs.predict(model, adj_matrix, node_index, top_k=5, threshold=0.5)
+recommended_nodes = cr.predict(model, adj_matrix, node_index, top_k=5, threshold=0.5)
 print(f"Recommended nodes for node {node_index}: {recommended_nodes}")
                     </code></pre>
                 </div>
